[package]
name = "dlc-venc-adaptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
anyhow = "1"
zkp = {  version = "0.8", features = ["u64_backend"] }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "3", default-features = false, features = ["serde", "std"] }
sha2 = "0.9"
rand_chacha = "0.3"
bincode = {  version = "2.0.0-rc.1", features = ["serde"] }
serde = { version = "1" }
clap = {  version = "3", features = ["derive"] }
lazy_static = "1"
